--- a/src/navigation/conf/costmap_common_params.yaml
+++ b/src/navigation/conf/costmap_common_params.yaml
@@ -1,15 +1,23 @@
+#Set map type
+map_type: costmap
+
+transform_tolerance: 0.2
+
 obstacle_range: 2.5
+max_obstacle_height: 2.0
 raytrace_range: 3.0
 
 footprint: [[-0.30,-0.255], [0.30,-0.255], [0.30,0.255], [-0.30,0.255]]
 footprint_padding: 0
 
-robot_radius: 0.74
+inscribed_radius: 0.2
+circumscribed_radius: 0.3
 
-transform_tolerance: 0.2
-inflation_radius: 0.55
+inflation_radius: 0.4
+cost_scaling_factor: 10.0
 
+lethal_cost_threshold: 100
 
 observation_sources: laser_scan_sensor
 
-laser_scan_sensor: {sensor_frame: laser_frame, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+laser_scan_sensor: {sensor_frame: laser_frame, data_type: LaserScan, expected_update_rate: 1.5, observation_persistence: 0.0, topic: scan, marking: true, clearing: true}
