--- a/src/navigation/conf/costmap_common_params.yaml
+++ b/src/navigation/conf/costmap_common_params.yaml
@@ -7,7 +7,7 @@ obstacle_range: 2.5
 max_obstacle_height: 2.0
 raytrace_range: 3.0
 
-footprint: [[0.325, 0.29], [0.325, -0.29], [-0.325, 0.29], [-0.325, -0.29]]
+footprint: [[0.325, 0.29], [0.325, -0.29], [-0.325, -0.29], [-0.325, 0.29]]
 footprint_padding: 0
 
 inscribed_radius: 0.2
@@ -20,4 +20,4 @@ lethal_cost_threshold: 100
 
 observation_sources: laser_scan_sensor
 
-laser_scan_sensor: {sensor_frame: laser_frame, data_type: LaserScan, expected_update_rate: 1.5, observation_persistence: 0.0, topic: scan, marking: true, clearing: true}
+laser_scan_sensor: {data_type: LaserScan, topic: /scan, observation_persistence: 0.0, marking: true, clearing: true, expected_update_rate: 0.5}
