--- a/src/navigation/conf/costmap_common_params.yaml
+++ b/src/navigation/conf/costmap_common_params.yaml
@@ -3,9 +3,9 @@ map_type: costmap
 
 transform_tolerance: 0.2
 
-obstacle_range: 2.5
+obstacle_range: 1.75
 max_obstacle_height: 2.0
-raytrace_range: 3.0
+raytrace_range: 5.0
 
 footprint: [[0.325, 0.29], [0.325, -0.29], [-0.325, -0.29], [-0.325, 0.29]]
 footprint_padding: 0
@@ -20,4 +20,4 @@ lethal_cost_threshold: 100
 
 observation_sources: laser_scan_sensor
 
-laser_scan_sensor: {sensor_frame: laser_frame, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: True, clearing: True}
