--- a/src/navigation/conf/local_costmap_params.yaml
+++ b/src/navigation/conf/local_costmap_params.yaml
@@ -3,19 +3,19 @@ local_costmap:
     ## Parameters for setting the threshold on obstacle information
     # obstacle_range <--> Robot will only updates its map with information about obstacle within this value
     # raytrace_range <--> Robot attempts to clear out space in front of its values' meter away given sensor readings
-    obstacle_range : 2.5
-    raytrace_range : 3.0
+    obstacle_range : 2
+    raytrace_range : 2.5
     # footprint describe the outfit of the robot >> assume the center is located at [0, 0]
     # footprint: [[-0.20, -0.20], [-0.20, 0.20], [0.20, 0.20], [0.20, -0.20]]
     footprint_padding: 0.01
     robot_radius: 0.2
-    transform_tolerance: 0.5
+    transform_tolerance: 0.4
 
     #set the update frequences (Hz)
-    update_frequency: 10
+    update_frequency: 5
 
     # set the publish frequency of the visualization information
-    publish_frequency: 20.0
+    publish_frequency: 2
 
     # define what coordinate frames the costmap should run in 
     global_frame: base_link
@@ -24,17 +24,17 @@ local_costmap:
     robot_base_frame: base_link
     
     # Whether or not the costmap initialize itself based on a map serverd by the map_server
-    #static_map: false
+    # static_map: False
  
     # Whether the costmap will remain centered around the robot as the rovot moves through the world
-    rolling_windows: true
+    rolling_windows: True
 
     # Setting the width, height and resolution of the costmap || (meters) (meters/cell)
-    width: 2.0
-    height: 2.0
-    resolution: 0.01
-    origin_x: -1
-    origin_y: -1
+    width: 5
+    height: 5
+    resolution: 0.1
+    origin_x: -2.5
+    origin_y: -2.5
 
     # Constructing the Mulit-Layered Costmap
     plugins:
@@ -45,7 +45,7 @@ local_costmap:
     sensor_obstacle:
         # Observation_sources <--> define a list of sensors going to pass infomation to costmap
         observation_sources: laser_scan_sensor
-        laser_scan_sensor: {sensor_frame: laser_frame, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+        laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: True, clearing: True}
     inflation:
         inflation_radius: 0.2
-        cost_scaling_factor: 10.0
+        cost_scaling_factor: 6.0
