--- a/src/navigation/conf/move_base_params.yaml
+++ b/src/navigation/conf/move_base_params.yaml
@@ -3,18 +3,18 @@ base_global_planner: navfn/NavfnROS
 # Choose which Local Planner Plugin to use
 base_local_planner: teb_local_planner/TebLocalPlannerROS
 
-controller_frequency: 20
-controller_patience: 15.0
+controller_frequency: 5
+controller_patience: 30
 
-planner_frequency: 0.1
-planner_patience: 5.0
+planner_frequency: 60
+planner_patience: 15
 
-oscillation_timeout: 60.0
-oscillation_distance: 0.5
+oscillation_timeout: 30.0
+oscillation_distance: 0.05
 
-shutdown_costmap: false
+shutdown_costmap: False
 
-recovery_behavior_enabled: false
+recovery_behavior_enabled: False
 conservative_reset_dist: 0.1
 
-clearing_rotation_allowed: true
+clearing_rotation_allowed: True
