--- a/src/navigation/conf/teb_local_planner_params.yaml
+++ b/src/navigation/conf/teb_local_planner_params.yaml
@@ -24,11 +24,11 @@ TebLocalPlannerROS:
  # ********************** Carlike robot parameters ********************
  min_turning_radius: 1        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
  wheelbase: 0.51                 # Wheelbase of our robot
- cmd_angle_instead_rotvel: false # stage simulator takes the angle instead of the rotvel as input (twist message)
+ cmd_angle_instead_rotvel: False # stage simulator takes the angle instead of the rotvel as input (twist message)
  # ********************************************************************
 
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-  # type: "line"
+  type: "polygon"
   # radius: 0.74 # for type "circular"
   # line_start: [0.0, 0.0] # for type "line"
   # line_end: [0.3, 0.0] # for type "line"
@@ -37,7 +37,7 @@ TebLocalPlannerROS:
   # rear_offset: 0.2 # for type "two_circles"
   # rear_radius: 0.2 # for type "two_circles"
   #vertices: [ [0.20, -0.20], [-0.20, -0.20], [-0.20, 0.20], [0.20, 0.20]] # for type "polygon"
-  vertices: [ [-0.30, -0.255], [0.30, -0.255], [0.3, 0.255], [-0.30, 0.255]] # for type "polygon"
+  vertices: [[0.33,0.29],[0.33,-0.29],[-0.33,-0.29],[-0.33,0.29]] # for type "polygon"
 
  # GoalTolerance
     
@@ -47,7 +47,7 @@ TebLocalPlannerROS:
     
  # Obstacles
     
- min_obstacle_dist: 0.7 # This value must also include our robot's expansion, since footprint_model is set to "line".
+ min_obstacle_dist: 0.115 # This value must also include our robot's expansion, since footprint_model is set to "line".
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 1.0
  obstacle_poses_affected: 30
@@ -75,10 +75,10 @@ TebLocalPlannerROS:
 
  # Homotopy Class Planner
 
- enable_homotopy_class_planning: True
+ enable_homotopy_class_planning: False
  enable_multithreading: True
  simple_exploration: False
- max_number_classes: 4
+ max_number_classes: 2
  selection_cost_hysteresis: 1.0
  selection_obst_cost_scale: 1.0
  selection_alternative_time_cost: False
