--- a/src/navigation/conf/global_costmap_params.yaml
+++ b/src/navigation/conf/global_costmap_params.yaml
@@ -6,7 +6,7 @@ global_costmap:
     obstacle_range : 2.5
     raytrace_range : 3.0
     # footprint describe the outfit of the robot >> assume the center is located at [0, 0]
-    footprint: [[0.325, 0.29], [0.325, -0.29], [-0.325, 0.29], [-0.325, -0.29]]
+    footprint: [[-0.30,-0.275], [0.30,-0.275], [0.30,0.275], [-0.30,0.275]]
     footprint_padding: 0.01
     robot_radius: 0.2
     transform_tolerance: 0.5
