--- a/src/navigation/conf/teb_local_planner_params.yaml
+++ b/src/navigation/conf/teb_local_planner_params.yaml
@@ -1,9 +1,33 @@
 TebLocalPlannerROS:
 
  odom_topic: odom
-    
+
+ ## Costmap converter plugin   
+ costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSMCCH"
+#  costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSRANSAC"
+#  costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSMCCH"
+#  costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSConcaveHull"
+ #costmap_converter_plugin: "" # deactivate plugin
+ costmap_converter_spin_thread: True
+ costmap_converter_rate: 5
+
+ 
+## Configure plugins (namespace move_base/TebLocalPlannerROS/PLUGINNAME)
+## The parameters must be added for each plugin separately
+# costmap_converter/CostmapToLinesDBSRANSAC:
+#  cluster_max_distance: 0.4
+#  cluster_min_pts: 2
+#  ransac_inlier_distance: 0.15
+#  ransac_min_inliers: 10
+#  ransac_no_iterations: 2000
+#  ransac_remainig_outliers: 3
+#  ransac_convert_outlier_pts: True
+#  ransac_filter_remaining_outlier_pts: False
+#  convex_hull_min_pt_separation: 0.1
+
+
+
  # Trajectory
-  
  teb_autosize: True
  dt_ref: 0.5
  dt_hysteresis: 0.1
@@ -15,9 +39,9 @@ TebLocalPlannerROS:
  # Robot
          
  max_vel_x: 0.15
- max_vel_x_backwards: 0.1
+ max_vel_x_backwards: 0.15
  max_vel_y: 0.0
- max_vel_theta: 0.1 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
+ max_vel_theta: 0.15 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
  acc_lim_x: 0.15
  acc_lim_theta: 0.15
 
@@ -41,9 +65,9 @@ TebLocalPlannerROS:
 
  # GoalTolerance
     
- xy_goal_tolerance: 0.2
- yaw_goal_tolerance: 0.2
- free_goal_vel: False
+ xy_goal_tolerance: 0.25
+ yaw_goal_tolerance: 0.25
+ free_goal_vel: True
     
  # Obstacles
     
@@ -51,9 +75,6 @@ TebLocalPlannerROS:
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 0.115
  obstacle_poses_affected: 30
- costmap_converter_plugin: "lines"
- costmap_converter_spin_thread: True
- costmap_converter_rate: 5
  include_dynamic_obstacles: True
  legacy_obstacle_association: False
 
