--- a/src/gmc_twist_mux/config/twist_mux_locks.yaml
+++ b/src/gmc_twist_mux/config/twist_mux_locks.yaml
@@ -10,18 +10,17 @@
 
 locks:
 -
+  name    : keyboard 
+  topic   : keyboard_priority
+  timeout : 0.0
+  priority: 100
+-
   name    : pause
   topic   : pause_navigation
   timeout : 0.0
-  # Same priority as joystick control, so it'll not block it.
   priority: 100
 -
   name    : loop_closure
   topic   : stop_closing_loop
   timeout : 0.0
   priority: 90
--
-  name    : joystick 
-  topic   : joy_priority
-  timeout : 0.0
-  priority: 100
