add launch file main project

--- a/src/gmc_twist_mux/config/twist_mux_locks.yaml
+++ b/src/gmc_twist_mux/config/twist_mux_locks.yaml
@@ -10,8 +10,8 @@
 
 locks:
 -
-  name    : keyboard 
-  topic   : keyboard_priority
+  name    : pckeyboard 
+  topic   : pckeyboard_priority
   timeout : 0.0
   priority: 100
 -
