--- a/src/gmc_tf/CMakeLists.txt
+++ b/src/gmc_tf/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(test_tf)
+project(gmc_tf)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -104,7 +104,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES test_tf
+#  LIBRARIES gmc_tf
 #  CATKIN_DEPENDS geometry_msgs roscpp tf
 #  DEPENDS system_lib
 )
@@ -122,7 +122,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/test_tf.cpp
+#   src/${PROJECT_NAME}/gmc_tf.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -133,7 +133,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(test_tf_node src/tf_test.cpp)
+add_executable(gmc_tf_node src/tf_test.cpp)
 add_executable(listen_tf_node src/tf_listen.cpp)
 
 ## Rename C++ executable without prefix
@@ -147,7 +147,7 @@ add_executable(listen_tf_node src/tf_listen.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(test_tf_node
+target_link_libraries(gmc_tf_node
   ${catkin_LIBRARIES}
 )
 
@@ -202,7 +202,7 @@ target_link_libraries(listen_tf_node
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_test_tf.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_gmc_tf.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
