--- a/src/gmc_twist_mux/config/twist_mux_topics.yaml
+++ b/src/gmc_twist_mux/config/twist_mux_topics.yaml
@@ -12,7 +12,7 @@ topics:
   timeout : 0.5
   priority: 10
 -
-  name    : keyboard
-  topic   : key_vel
+  name    : pckeyboard
+  topic   : pc_vel
   timeout : 0.5
   priority: 90
