--- a/src/ublox/ublox_gps/config/zed_f9p.yaml
+++ b/src/ublox/ublox_gps/config/zed_f9p.yaml
@@ -1,5 +1,35 @@
+debug: 1                    # Range 0-4 (0 means no debug statements will print)
 device: /dev/ttyACM0
 frame_id: gps
 uart1:
-  baudrate: 38400
-config_on_startup: false
+  baudrate: 115200
+  in: 32                    # RTCM 3
+  out: 0                    # No UART out for rover
+# config_on_startup: false
+
+# TMODE3 Config
+tmode3: 1                   # Survey-In Mode
+sv_in:
+  reset: false               # True: disables and re-enables survey-in (resets)
+                            # False: Disables survey-in only if TMODE3 is
+                            # disabled
+  min_dur: 300              # Survey-In Minimum Duration [s]
+  acc_lim: 3.0              # Survey-In Accuracy Limit [m]
+
+# GNSS Config
+gnss:
+  # gps: true                 # (not required since it defaults to true)
+  glonass: true
+  galileo: true             
+  beidou: true             
+  qzss: true               
+  sbas: true
+
+dgnss_mode: 3               # Fixed mode
+
+inf:
+  all: true                   # Whether to display all INF messages in console
+
+publish:
+  fix: true
+  fix_velocity: true
