--- a/src/ublox/ublox_gps/package.xml
+++ b/src/ublox/ublox_gps/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format='2'>
   <name>ublox_gps</name>
-  <version>1.1.2</version>
+  <version>1.4.1</version>
   <description>
      Driver for u-blox GPS devices.
   </description>
@@ -18,7 +18,7 @@
   <depend>ublox_msgs</depend>
   <depend>roscpp</depend>
   <depend>roscpp_serialization</depend>
+  <depend>tf</depend>
   <depend>diagnostic_updater</depend>
-  <depend>rtcm_msgs</depend>
 
 </package>
