--- a/src/mpu6050_serial_to_imu/CMakeLists.txt
+++ b/src/mpu6050_serial_to_imu/CMakeLists.txt
@@ -43,7 +43,7 @@ include_directories(
 )
 
 ## Declare a C++ executable
-add_executable(mpu6050_serial_to_imu_node src/mpu6050_serial_to_imu_node.cpp)
+add_executable(mpu6050_serial_to_imu_node src/mpu6050_serial_odom.cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(mpu6050_serial_to_imu_node
