--- a/src/robot_localization/params/ekf_gmc.yaml
+++ b/src/robot_localization/params/ekf_gmc.yaml
@@ -3,6 +3,8 @@ odom_frame: odom            # Defaults to "odom" if unspecified
 base_link_frame: base_link  # Defaults to "base_link" if unspecified
 world_frame: map           # Defaults to the value of odom_frame if unspecified
 
+two_d_mode: true
+
 odom0: odom_rf2o
 #x     , y     , z,
 #roll  , pitch , yaw,
@@ -24,7 +26,7 @@ odom0_config: [true,  true,  true,
 
 imu0: imu/data
 imu0_config: [false, false,  false,
+              true, true,  true,
               false, false,  false,
-              false, false,  false,
-              false, false,  true,
-              false, false,  false]
+              true, true,  true,
+              true, true,  true]
